# webhook-helper

./: Cargo.toml  Dockerfile  README.md  example.yaml  webhook-helper.yaml
.github/workflows/: check.yml  publish.yml
src/: admission.rs  bootstrap.rs  controller.rs  crd.rs  main.rs
src/operator/: bootstrap.rs  certificate.rs  mod.rs  service.rs  utils.rs  webhook.rs
src/operator/backend/: deployment.rs  mod.rs  pod.rs  utils.rs
