[package]
name = "webhook-helper"
version = "0.1.0"
edition = "2021"

[features]
local = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
http = "1.1.0"
k8s-openapi = { version = "0.20.0", features = ["latest"] }
kube = { version = "0.87.1", features = ["runtime", "derive", "admission"] }
kube-derive = "0.87.1"
rcgen = "0.12.0"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = { version = "0.3.6", features = ["tokio-rustls", "tls"] }

# Force update of dependency to mitigate https://rustsec.org/advisories/RUSTSEC-2023-0074
zerocopy = ">=0.7.31"
